--- a/AC-iOS-Multiple-MVC/AC-iOS-Multiple-MVC/Base.lproj/Main.storyboard
+++ b/AC-iOS-Multiple-MVC/AC-iOS-Multiple-MVC/Base.lproj/Main.storyboard
@@ -16,8 +16,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7Md-dD-GbL">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7Md-dD-GbL">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="animalCell" rowHeight="157" id="rVo-l5-fUY" customClass="AnimalCellTableViewCell" customModule="AC_iOS_Multiple_MVC" customModuleProvider="target">
@@ -27,38 +28,31 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="157"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QHJ-wv-JLI">
-                                                    <rect key="frame" x="0.0" y="0.0" width="130" height="157"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="140" id="Y30-bq-N8b"/>
-                                                        <constraint firstAttribute="width" constant="130" id="ajl-yi-9wa"/>
-                                                    </constraints>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Animal Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Tv-pq-BeC">
-                                                    <rect key="frame" x="138" y="11" width="256" height="20.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Animal Name" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Tv-pq-BeC">
+                                                    <rect key="frame" x="201" y="19" width="185" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Classification / Origin" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sxt-hC-HnN">
-                                                    <rect key="frame" x="138" y="69.5" width="256" height="18"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Classification / Origin" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sxt-hC-HnN">
+                                                    <rect key="frame" x="201" y="70" width="201" height="18"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QHJ-wv-JLI">
+                                                    <rect key="frame" x="0.0" y="0.0" width="157" height="157"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="157" id="51P-Md-hNZ"/>
+                                                        <constraint firstAttribute="height" constant="157" id="rzg-S3-uvZ"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="1Tv-pq-BeC" firstAttribute="top" secondItem="hkW-t7-w0Y" secondAttribute="topMargin" id="1NT-z4-5H2"/>
-                                                <constraint firstItem="Sxt-hC-HnN" firstAttribute="top" secondItem="1Tv-pq-BeC" secondAttribute="bottom" constant="38" id="4TL-vx-Ld5"/>
-                                                <constraint firstItem="QHJ-wv-JLI" firstAttribute="width" secondItem="hkW-t7-w0Y" secondAttribute="width" multiplier="0.31401" id="5KZ-uX-IdI"/>
-                                                <constraint firstItem="QHJ-wv-JLI" firstAttribute="leading" secondItem="hkW-t7-w0Y" secondAttribute="leading" id="JKW-gH-Byk"/>
-                                                <constraint firstItem="1Tv-pq-BeC" firstAttribute="leading" secondItem="QHJ-wv-JLI" secondAttribute="trailing" constant="8" id="Ltt-Cz-LhR"/>
-                                                <constraint firstItem="QHJ-wv-JLI" firstAttribute="top" secondItem="hkW-t7-w0Y" secondAttribute="top" id="MXP-8Q-1cg"/>
-                                                <constraint firstItem="1Tv-pq-BeC" firstAttribute="trailing" secondItem="hkW-t7-w0Y" secondAttribute="trailingMargin" id="Mob-MB-ffx"/>
-                                                <constraint firstItem="Sxt-hC-HnN" firstAttribute="trailing" secondItem="hkW-t7-w0Y" secondAttribute="trailingMargin" id="UQB-cN-Hvd"/>
-                                                <constraint firstItem="Sxt-hC-HnN" firstAttribute="centerY" secondItem="QHJ-wv-JLI" secondAttribute="centerY" id="VOn-Gq-Y3y"/>
-                                                <constraint firstAttribute="bottom" secondItem="QHJ-wv-JLI" secondAttribute="bottom" id="dI8-8s-ueh"/>
-                                                <constraint firstItem="Sxt-hC-HnN" firstAttribute="leading" secondItem="QHJ-wv-JLI" secondAttribute="trailing" constant="8" id="mib-1d-uzK"/>
+                                                <constraint firstItem="QHJ-wv-JLI" firstAttribute="leading" secondItem="hkW-t7-w0Y" secondAttribute="leading" id="rkt-BB-H0V"/>
+                                                <constraint firstItem="QHJ-wv-JLI" firstAttribute="centerY" secondItem="hkW-t7-w0Y" secondAttribute="centerY" id="tqT-7B-nKI"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -72,12 +66,6 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="7Md-dD-GbL" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="5QN-of-ldv"/>
-                            <constraint firstItem="7Md-dD-GbL" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="rYj-1C-i1s"/>
-                            <constraint firstItem="7Md-dD-GbL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rrz-ND-TzU"/>
-                            <constraint firstItem="7Md-dD-GbL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="xva-Qp-qpo"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="4X9-SM-C7c"/>
@@ -97,7 +85,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kyI-0a-5fD">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kyI-0a-5fD">
                                 <rect key="frame" x="0.0" y="88" width="414" height="358.5"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EWQ-nr-dpT">
